--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^0.1.39"
+    "jest": "^0.1.39",
+    "moment": "^2.10.2"
+  },
+  "devDependencies": {
+    "jest-cli": "^0.4.0"
   }
 }
