--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pos_v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "jest"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "jest": "^0.1.39",
+    "lodash": "^3.7.0",
     "moment": "^2.10.2"
   },
   "devDependencies": {
